[gd_scene load_steps=6 format=3 uid="uid://b3sxm2a4x4vim"]

[ext_resource type="Script" path="res://Scenes/ServiceBar/service_bar.gd" id="1_142ss"]

[sub_resource type="InputEventAction" id="InputEventAction_rkxaf"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_dtr3n"]
events = [SubResource("InputEventAction_rkxaf")]

[sub_resource type="InputEventAction" id="InputEventAction_twc6h"]
action = &"ui_find"

[sub_resource type="Shortcut" id="Shortcut_pn7xk"]
events = [SubResource("InputEventAction_twc6h")]

[node name="ServiceBar" type="Button"]
offset_left = 56.0
offset_top = 7.0
offset_right = 159.0
offset_bottom = 43.0
flat = true
script = ExtResource("1_142ss")

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = -56.0
offset_top = -7.0
offset_right = 163.0
offset_bottom = 42.0
mouse_filter = 1

[node name="Button" type="Button" parent="LineEdit"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 12
shortcut = SubResource("Shortcut_dtr3n")
text = "‚ùå"
flat = true

[node name="SearchButton" type="Button" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 6.0
offset_right = 131.0
offset_bottom = 31.0
tooltip_text = "Search"
theme_override_font_sizes/font_size = 12
shortcut = SubResource("Shortcut_pn7xk")
text = "üîé "
text_overrun_behavior = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Services"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="LineEdit/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SearchButton" to="." method="_on_search_button_pressed"]
